--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -9,37 +9,38 @@ html {
     font-size: 16px;
 }
 
-* {
-    /*border: 1px solid red;*/
-    list-style: none;
-    text-decoration: none;
+body {
+    background-color: #FFE0E3;
+    color: black;
 }
 
-body {
-    background-color: #fc9af9;
-    color: white;
+* {
+    border: 1px solid red;
+    list-style: none;
+    text-decoration: none;
 }
 
 /* Header Section */
 
 header {
     width: 100%;
+    height: 8%;
 }
 
 #head-content {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #73ccf5;
-    height: 3.5rem;
+    background-color: white;
+    height: 100%;
 }
 
 header #head-content h2 {
-    color: white;
+    color: black;
     position: relative;
     text-align: center;
     left: 10%;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
 }
 
 #head-content ul {
@@ -50,9 +51,9 @@ header #head-content h2 {
 }
 
 header #head-content ul a {
-    color: white;
+    color: black;
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.6rem;
     padding: 0px 10px;
 }
 
@@ -62,12 +63,14 @@ main {
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
 }
 
 #quote-container {
     width: 100%;
     height: 20%;
     position: relative;
+    top: 6%;
     display: flex;;
     align-items: center;
     justify-content: center;
@@ -80,21 +83,29 @@ main {
     opacity: .8;
 }
 
+#quote-container em {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 #quote-container h3 {
-    font-size: 2rem;
+    width: 80%;
+    font-size: 3.5rem;
     opacity: 1;
     color: black;
 }
 
 /* Footer Section */
+
 footer {
-    position: fixed;
+    position: relative;
     display: flex;
     justify-content: center;
     align-content: center;
     bottom: 0;
     left: 0;
-    height: 60px;
+    height: 10%;
     width: 100%;
     background-color: #73ccf5;
 }
@@ -109,21 +120,52 @@ footer {
 
 #social-media {
     height: 100%;
-    width: 60%;
+    width: 80%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-content: center;
 }
 
 #social-media a {
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
+    min-width: 50px;
     align-self: center;
     border-radius: 50%;
 }
 
 #social-media a img {
-    height: 40px;
-    width: 40px;
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
+}
+
+.logo {
+    background-color: white;
+}
+
+/* FOR MOBILE DEVICES */
+
+@media only screen and (min-width: 200px) and (max-width: 450px) {
+    html {
+        font-size: 9px;
+        width: 100vw;
+        height: 100vh;
+    }
+    #head-content ul {
+        right: 2%;
+    }
+    header #head-content ul a {
+        font-size: 1.4rem;
+        padding: 0px 5px;
+    }
+    header #head-content h2 {
+        left: 5%;
+        font-size: 1.6rem;
+    }
+    #social-media a {
+        height: 35px;
+        width: 35px;
+        min-width: 35px;
+    }    
 }
