--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -62,7 +62,7 @@ header #head-content ul a {
 main {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -105,7 +105,7 @@ footer {
     align-content: center;
     bottom: 0;
     left: 0;
-    height: 10%;
+    height: 5.5rem;
     width: 100%;
     background-color: #73ccf5;
 }
