--- a/Resources/CSS/gallery.css
+++ b/Resources/CSS/gallery.css
@@ -65,17 +65,20 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    height: 2000px;
     width: 100%;
 }
 
 #photo-container {
+    position: relative;
+    top: -10%;
     height: 60%;
     width: 90%;
-    margin: 10% 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
-    gap: 2%;
+    gap: 5px;
 }
 
 .photo-card {
@@ -160,7 +163,10 @@ footer {
     html {
         font-size: 9px;
         width: 100vw;
-        height: 100vh;
+        height: 700px;
+    }
+    main {
+        height: 700px;
     }
     #head-content ul {
         right: 2%;
