--- a/Resources/CSS/gallery.css
+++ b/Resources/CSS/gallery.css
@@ -1,31 +1,42 @@
-html, body {
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    height: 100vh;
+* {
+    border: 1px solid red;
+    list-style: none;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body, main {
+    width: 100vw;
 }
 
 html {
     font-size: 16px;
+    height: 100%;
 }
 
 body {
     background-color: #FFE0E3;
     color: black;
-    height: 100vh;
+    min-height: 100vh;
+    display: grid;
+    grid-template: 8% 1fr 5.5rem / 1fr;
+    /*flex-direction: column;
+    justify-content: space-between;*/
 }
 
-* {
-    /*border: 1px solid red;*/
-    list-style: none;
-    text-decoration: none;
+main {
+   height:100%;
+   display: flex;
+   justify-content: center;
 }
 
 /* Header Section */
 
 header {
     width: 100%;
-    height: 8%;
+    /*height: 8%;*/
 }
 
 #head-content {
@@ -60,25 +71,13 @@ header #head-content ul a {
 
 /* Main Section */
 
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 2000px;
-    width: 100%;
-}
-
 #photo-container {
-    position: relative;
-    top: -10%;
-    height: 60%;
+    height: auto;
     width: 90%;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: auto;
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
-    gap: 5px;
+    gap: 10px;
 }
 
 .photo-card {
@@ -95,8 +94,6 @@ main {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-top-left-radius: 10%;
-    border-top-right-radius: 10%;
 }
 
 .caption {
@@ -105,20 +102,16 @@ main {
     font-size: 1.6rem;
     opacity: 0.7;
     border: 1px dashed #73ccf5;
-    border-bottom-left-radius: 20%;
-    border-bottom-right-radius: 20%;
 }
 
 /* Footer Section */
 
 footer {
-    position: relative;
     display: flex;
     justify-content: center;
     align-content: center;
-    bottom: 0;
-    left: 0;
-    height: 5.5rem;
+    /*margin-top: auto;*/
+    /*height: 5.5rem;*/
     width: 100%;
     background-color: #73ccf5;
 }
@@ -162,11 +155,6 @@ footer {
 @media only screen and (max-width: 450px) {
     html {
         font-size: 9px;
-        width: 100vw;
-        height: 700px;
-    }
-    main {
-        height: 700px;
     }
     #head-content ul {
         right: 2%;
