--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -1,30 +1,40 @@
-html, body {
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    height: 100%;
+* {
+    border: 1px solid red;
+    list-style: none;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body, main {
+    width: 100vw;
 }
 
 html {
     font-size: 16px;
+    height: 100vh;
 }
 
 body {
     background-color: #FFE0E3;
     color: black;
+    min-height: 100vh;
+    display: grid;
+    grid-template: 8% 1fr 5.5rem / 1fr;
+    /*flex-direction: column;
+    justify-content: space-between;*/
 }
 
-* {
-    /*border: 1px solid red;*/
-    list-style: none;
-    text-decoration: none;
+main {
+    height: 100%;
 }
 
 /* Header Section */
 
 header {
     width: 100%;
-    height: 8%;
+    /*height: 8%;*/
 }
 
 #head-content {
@@ -59,16 +69,9 @@ header #head-content ul a {
 
 /* Main Section */
 
-main {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100%;
-}
-
 #quote-container {
     width: 100%;
-    height: 20%;
+    height: 20rem;
     position: relative;
     top: 6%;
     display: flex;;
@@ -99,13 +102,11 @@ main {
 /* Footer Section */
 
 footer {
-    position: relative;
     display: flex;
     justify-content: center;
     align-content: center;
-    bottom: 0;
-    left: 0;
-    height: 5.5rem;
+    /*margin-top: auto;
+    height: 5.5rem;*/
     width: 100%;
     background-color: #73ccf5;
 }
@@ -127,9 +128,8 @@ footer {
 }
 
 #social-media a {
-    height: 50px;
-    width: 50px;
-    min-width: 50px;
+    width: same-as-height;
+    height: 70%;
     align-self: center;
     border-radius: 50%;
 }
@@ -149,8 +149,6 @@ footer {
 @media only screen and (min-width: 200px) and (max-width: 450px) {
     html {
         font-size: 9px;
-        width: 100vw;
-        height: 100vh;
     }
     #head-content ul {
         right: 2%;
