--- a/Resources/CSS/gallery.css
+++ b/Resources/CSS/gallery.css
@@ -1,5 +1,5 @@
 * {
-    border: 1px solid red;
+    /*border: 1px solid red;*/
     list-style: none;
     text-decoration: none;
     margin: 0;
@@ -13,7 +13,7 @@ html, body, main {
 
 html {
     font-size: 16px;
-    height: 100%;
+    height: auto;
 }
 
 body {
@@ -21,22 +21,14 @@ body {
     color: black;
     min-height: 100vh;
     display: grid;
-    grid-template: 8% 1fr 5.5rem / 1fr;
-    /*flex-direction: column;
-    justify-content: space-between;*/
-}
-
-main {
-   height:100%;
-   display: flex;
-   justify-content: center;
+    grid-template: 8% 1fr 5.5rem / 100%;
 }
 
 /* Header Section */
 
 header {
     width: 100%;
-    /*height: 8%;*/
+    grid-area: 1 / 1 / 2 / 2;
 }
 
 #head-content {
@@ -71,23 +63,27 @@ header #head-content ul a {
 
 /* Main Section */
 
+main {
+    height:100%;
+    display: flex;
+    justify-content: center;
+    grid-area: 2 / 1 / 3 / 2;
+ }
+
 #photo-container {
-    height: auto;
     width: 90%;
-    margin: auto;
+    margin: 5%;
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
-    gap: 10px;
 }
 
 .photo-card {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    padding: 0;
-    margin: 0;
     display: flex;
     flex-direction: column;
+    padding: 3%;
 }
 
 .photo {
@@ -110,10 +106,9 @@ footer {
     display: flex;
     justify-content: center;
     align-content: center;
-    /*margin-top: auto;*/
-    /*height: 5.5rem;*/
     width: 100%;
     background-color: #73ccf5;
+    grid-area: 3 / 1 / 4 / span 1;
 }
 
 #foot-content {
@@ -133,9 +128,8 @@ footer {
 }
 
 #social-media a {
-    height: 50px;
-    width: 50px;
-    min-width: 50px;
+    width: same-as-height;
+    height: 70%;
     align-self: center;
     border-radius: 50%;
 }
