--- a/Resources/CSS/gallery.css
+++ b/Resources/CSS/gallery.css
@@ -22,6 +22,9 @@ body {
     min-height: 100vh;
     display: grid;
     grid-template: 8% 1fr 5.5rem / 100%;
+    /*For newly added photos */
+    grid-auto-rows: auto;
+    grid-auto-flow: row;
 }
 
 /* Header Section */
@@ -64,13 +67,14 @@ header #head-content ul a {
 /* Main Section */
 
 main {
-    height:100%;
+    height: auto;
     display: flex;
     justify-content: center;
     grid-area: 2 / 1 / 3 / 2;
  }
 
 #photo-container {
+    height: auto;
     width: 90%;
     margin: 5%;
     display: grid;
