--- a/Resources/CSS/gallery.css
+++ b/Resources/CSS/gallery.css
@@ -61,7 +61,9 @@ header #head-content ul a {
     color: black;
     text-align: center;
     font-size: 1.6rem;
-    padding: 0px 10px;
+    padding: 5px 10px;
+    border: 2px dashed pink;
+    margin: 0px 2px;
 }
 
 /* Main Section */
