--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -27,12 +27,14 @@ body {
     color: red;
     width: 0;
     height: 0;
+    margin: 0;
 }
 
 .login-form h1 {
     background: black;
     color: white;
     padding: 10px;
+    margin: 10px auto;
     font-weight: bold;
     border: 2px solid #47afff;
     border-radius: 24px;
@@ -80,4 +82,10 @@ body {
 .login-form input[type="submit"]:hover {
     background: #47afff;
     color: black;
+}
+
+@media only screen and (min-width: 200px) and (max-width: 450px) {
+    #incorrect-p {
+        padding: 10px;
+    }
 }
